--- a/src/main/resources/static/detalhes.html
+++ b/src/main/resources/static/detalhes.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalhes da Série - Screenmatch</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/detalhes.css">
+    <title>Detalhes do Filme - CineVault</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/detalhes.css">
 </head>
 <body>
-    <header id="main-header">
-        <!-- O cabeçalho pode ser carregado dinamicamente se necessário, ou duplicado -->
+<div class="min-h-screen bg-background">
+    <!-- Header -->
+    <header class="sticky top-0 z-50 w-full border-b border-border bg-background/95 backdrop-blur">
+        <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex h-16 items-center justify-between">
+                <a href="/" class="flex items-center space-x-2">
+                    <img src="img/placeholder-logo.svg" alt="CineVault Logo" class="h-8 w-8">
+                    <span class="text-2xl font-bold text-foreground">CineVault</span>
+                </a>
+            </div>
+        </div>
     </header>
 
-    <main id="main-content">
-        <div id="details-content" class="container">
-            <!-- Conteúdo da página de detalhes será injetado aqui -->
+    <!-- Main Content -->
+    <main class="container mx-auto px-4 sm:px-6 lg:px-8 py-8">
+        <div id="movieDetails">
+            <!-- Movie details will be loaded here -->
         </div>
     </main>
 
-    <footer id="main-footer">
-        <div class="container">
-            <p>&copy; 2024 Screenmatch. Todos os direitos reservados.</p>
+    <!-- Footer -->
+    <footer class="bg-muted border-t border-border">
+        <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-12">
+            <div class="text-center">
+                <p class="text-muted-foreground">© 2024 CineVault. Todos os direitos reservados.</p>
+            </div>
         </div>
     </footer>
+</div>
 
-    <script src="/js/detalhes.js" type="module"></script>
+<script src="js/detalhes.js"></script>
 </body>
 </html>
